# SCIPSharp

./: .gitignore  CMakeLists.txt  README.md  SCIPSharp.sln  conanfile.py
CSharp/libortki/: libortki.0.0.2.nupkg
src/SCIPSharp/: Native.cs  RetCode.cs  Scip.cs  Scip.csproj  Var.cs
test/: sciptest.cpp
test/Scip.Tests/: Scip.Tests.csproj  TestScip.cs
toolchains/: x86_64-windows.profile.jinja
